--- a/exams/2012-10-30/itads-exam-2012-10-30.tex
+++ b/exams/2012-10-30/itads-exam-2012-10-30.tex
@@ -47,7 +47,7 @@
 
 \section*{Rules}
 
-Aside from the obvious rules of conduct exams (e.g.\ no chatting):
+Aside from the obvious rules of conduct for exams (e.g.\ no chatting):
 
 \begin{itemize}
 \item
@@ -72,7 +72,7 @@ Aside from the obvious rules of conduct exams (e.g.\ no chatting):
 \item
   \textbf{Indicate the question number} for each of your answers.
   If a question has sub-questions, indicate the sub-question number after the main question number, separated by a dot.
-  For example, question 3 has 4 sub-questions, and their answers should be numbered 3.1, 3.2, 3.3, and 3.4.
+  For example, if question 3 has 4 sub-questions, their answers should be numbered 3.1, 3.2, 3.3, and 3.4.
 \end{itemize}
 
 
