some progress... in the car to palo alto...

--- a/exams/2013-01-10/itads-exam-2013-01-10.tex
+++ b/exams/2013-01-10/itads-exam-2013-01-10.tex
@@ -91,9 +91,9 @@ Each of them shows a data structure containing items of value $\{1, 2, 3, 4, 5, 
 
 \vfill
 
-\noindent
-\fbox{TBD}
-%%%\includegraphics[width=\columnwidth]{q1.pdf}
+\begin{center}
+\includegraphics[width=0.8\columnwidth]{ds.pdf}
+\end{center}
 
 \vfill
 
