--- a/exams/2013-01-10/itads-exam-2013-01-10.tex
+++ b/exams/2013-01-10/itads-exam-2013-01-10.tex
@@ -84,7 +84,10 @@ Aside from the obvious rules of conduct exams (e.g.\ no chatting):
 
 
 
-\question{6 points}
+\question{5 points}
+
+% 0.5 pts each for the lists
+% 1 pt each for the trees and graphs
 
 Below are six diagrams labelled \textbf{(A)}, \textbf{(B)}, \textbf{(C)}, \textbf{(D)}, \textbf{(E)}, and \textbf{(F)}.
 Each of them shows a data structure containing items of value $\{1, 2, 3, 4, 5, 6, 7\}$.
@@ -139,7 +142,9 @@ Use the most specific data structure name for each diagram.
 \clearpage
 
 
-\question{10 points}
+\question{5 points}
+
+% 0.5 pts for each calculation
 
 Answer the following questions about computational complexity.
 
@@ -215,7 +220,9 @@ Answer the following questions about computational complexity.
 \clearpage
 
 
-\question{8 points}
+\question{6 points}
+
+% 1 pt for each sub-question (although the first two are insultingly simple)
 
 The runtime of two programs \textbf{X} and \textbf{Y} has been measured for various problem sizes $N$.
 Also, the measured time has also been divided by $N^2$ and $N\log N$, as shown in the table below:
@@ -272,5 +279,138 @@ Answer the following questions.
 \item
   How long will program \textbf{Y} run (approximately) for a problem of size $N=4000$?
 \end{enumerate}
+
+
+\clearpage
+
+\question{9 points}
+
+% 3 pts for the backtrace (3 solution paths that all yield the same end result)
+% 6 pts for the second table (1 pt per correct row, but be nice concerning ``Folgefehler'')
+
+Dynamic programming can be used to choose coins that add up to a given amount, such that the number of coins is minimal.
+The following table shows this when the available coins are $C=\{1, 4\}$, for total amounts of up to $K=6$.
+
+The \emph{value} $F(K)$ stands for the minimum amount of coins to create a total of $K$.
+At each step, it is the minimum of the available options $f_1(K)$ and $f_4(K)$.
+Thus, $F$ is computed using $F(K)=\min(f_1(K), f_4(K))$.
+If an option is not available for a given step, it is marked $\varnothing$.
+Notice hat the table starts at $K=0$, where $F(0)=0$.
+
+\begin{center}
+  \begin{tabular}{|c|l|l|l|c|}
+    \hline
+    \textbf{step} &
+    \multicolumn{3}{|c|}{\textbf{choices}} &
+    \textbf{value}
+    \\
+    $K$ &
+    cost of $c=1$ &
+    cost of $c=4$ &
+    \textbf{best} $c$ &
+    $F$ \\
+    \hline
+    $0$ &
+    $\varnothing$ &
+    $\varnothing$ &
+    $\varnothing$ &
+    $F(0) = 0$
+    \\
+    \hline
+    $1$ &
+    $1+F(0)=1$ &
+    $\varnothing$ &
+    $c=1$ &
+    $F(1) = 1$
+    \\
+    \hline
+    $2$ &
+    $1+F(1)=2$ &
+    $\varnothing$ &
+    $c=1$ &
+    $F(2) = 2$
+    \\
+    \hline
+    $3$ &
+    $1+F(2)=3$ &
+    $\varnothing$ &
+    $c=1$ &
+    $F(3) = 3$
+    \\
+    \hline
+    $4$ &
+    $1+F(3)=4$ &
+    $1+F(0)=1$ &
+    $c=4$ &
+    $F(4) = 1$
+    \\
+    \hline
+    $5$ &
+    $1+F(4)=2$ &
+    $1+F(1)=2$ &
+    $c\in\{1,4\}$ &
+    $F(5) = 2$
+    \\
+    \hline
+    $6$ &
+    $1+F(5)=3$ &
+    $1+F(2)=3$ &
+    $c\in\{1,4\}$ &
+    $F(6) = 3$
+    \\
+    \hline
+  \end{tabular}
+\end{center}
+
+\vfill
+
+\begin{enumerate}
+\item
+  Using the table above, trace back all optimal solutions for $K=6$.
+\item
+  Fill in the table below, similar to the one above, for up to $K=6$ when there is a $c=3$ coin available.
+  In other words, use $C=\{1, 3, 4\}$, add $f_3(K)$ to the available choices, and use $F=\min(f_1, f_3, f_4)$.
+  
+  \emph{(You can also create a separate table on a new sheet of paper if you need more space.)}
+\end{enumerate}
+
+\vfill
+
+\begin{center}
+  \begin{tabular}{|c|p{0.22\columnwidth}|p{0.22\columnwidth}|p{0.22\columnwidth}|l|c|}
+    \hline
+    \textbf{step} &
+    \multicolumn{4}{|c|}{\textbf{choices}} &
+    \textbf{value}
+    \\
+    $K$ &
+    cost of $c=1$ &
+    cost of $c=3$ &
+    cost of $c=4$ &
+    \textbf{best} $c$ &
+    $F$ \\
+    \hline
+    $0$ &
+    $\varnothing$ &
+    $\varnothing$ &
+    $\varnothing$ &
+    $\varnothing$ &
+    $F(0) = 0$
+    \\
+    \hline
+    $1$ & & & & & \\ & & & & & \\ & & & & & \\ & & & & & \\
+    \hline
+    $2$ & & & & & \\ & & & & & \\ & & & & & \\ & & & & & \\
+    \hline
+    $3$ & & & & & \\ & & & & & \\ & & & & & \\ & & & & & \\
+    \hline
+    $4$ & & & & & \\ & & & & & \\ & & & & & \\ & & & & & \\
+    \hline
+    $5$ & & & & & \\ & & & & & \\ & & & & & \\ & & & & & \\
+    \hline
+    $6$ & & & & & \\ & & & & & \\ & & & & & \\ & & & & & \\
+    \hline
+  \end{tabular}
+\end{center}
 
 \end{document}
