corrected typo discovered during that exam session

--- a/exams/2012-10-30/itads-exam-2012-10-30.tex
+++ b/exams/2012-10-30/itads-exam-2012-10-30.tex
@@ -276,7 +276,7 @@ Each has different X and Y coordinates, written in parentheses after the label.
   \emph{(ii)} cubic: $T_B(N) \in O(N^3)$ ?
   
 \item
-  The time $T_C$ it takes to run \texttt{function\_C} for $N=512$ is $T_D=5ms$.
+  The time $T_C$ it takes to run \texttt{function\_C} for $N=512$ is $T_C=5ms$.
   Based on a big-Oh complexity analysis of the code shown below, how much time will it take for $N'=2048$?
   You can assume that the various \texttt{slow\_X} functions take significantly longer to execute than any of the other operations.
   
