time to go for lunch soon

--- a/exams/2013-08-22/itads-exam-2013-08-22.tex
+++ b/exams/2013-08-22/itads-exam-2013-08-22.tex
@@ -115,5 +115,6 @@ Aside from the obvious rules of conduct exams (e.g.\ no chatting):
 
 \question{5 points}
 
+\verbatimtabinput{q2-pseudocode.c}
 
 \end{document}
