one more, getting closer

--- a/exams/2013-08-22/itads-exam-2013-08-22.tex
+++ b/exams/2013-08-22/itads-exam-2013-08-22.tex
@@ -179,4 +179,25 @@ Note that the \texttt{Fifo} data structure and the various \texttt{fifo\_} funct
   \hline
 \end{tabular}
 
+
+\clearpage
+
+
+\question{5 points}
+
+In the following program, \texttt{print} is a function to print a number sequence defined recursively, and \texttt{calc} is a straightforward but very inefficient implementation to compute that sequence.
+
+\begin{enumerate}
+\item
+  What is the runtime complexity of \texttt{calc}?
+\item
+  Use \emph{memoization} to implement a more efficient version of \texttt{calc}.
+  You can give your answer in pseudo-code or as a textual explanation, there is no need to create correct C code.
+\item
+  Use \emph{dynamic programming} to implement another (also more efficient) version of \texttt{calc}.
+  Again, you can give your answer in pseudo-code or as a textual explanation.
+\end{enumerate}
+
+\verbatimtabinput{q4.c}
+
 \end{document}
