q4.1 was too difficult

--- a/exams/2013-08-22/itads-exam-2013-08-22.tex
+++ b/exams/2013-08-22/itads-exam-2013-08-22.tex
@@ -190,7 +190,7 @@ The \texttt{calc} function is a straightforward but very inefficient recursive i
 
 \begin{enumerate}
 \item
-  What is the runtime complexity of \texttt{calc}?
+  How many times will \texttt{calc(3)} get called as a result of calling \texttt{print(6)}?
 \item
   Use \emph{memoization} to implement a more efficient version of \texttt{calc}.
   You can give your answer in pseudo-code or as a textual explanation, there is no need to create correct C code.
