tweaks to assignment

--- a/pr1/itads2013-pr1-assignment.tex
+++ b/pr1/itads2013-pr1-assignment.tex
@@ -160,14 +160,15 @@ Perform one or more of these suggested tasks to be able to receive the highest g
 Gnuplot can be used interactively (like in exercise 7) by just giving its command in a terminal.
 But it can also run in batch mode by passing the name of a plot script file on its command line.
 A gnuplot script file is just a text file with a list of gnuplot commands.
-The \texttt{examples/} subdirectory of the project contains several such scripts (they have a ``\texttt{.plot}'' extension on the file name).
-Notice that those examples which create a figure window must be launched with the additional option ``\texttt{-persist}'' (otherwise the figure just flashes briefly on the screen).
+You can download an archive with several example scripts from the course website.
+they have a ``\texttt{.plot}'' extension on the file name.
+Notice that those examples which create a figure window must be launched with the additional option ``\texttt{-persist}'' as otherwise the figure just flashes briefly on the screen.
 Notice that there are also example plot files which save the figure in a PNG image, intended for inclusion in your report.
 Please read the gnuplot documentation~\cite{gnuplot} for more details.
 
 Also notice that you are free to use some other software to plot your data.
 For example, if you are familiar with Matlab, you may find that much easier to work with.
-Excel may be another viable option.
+Excel or LibreOffice Calc may be other viable options.
 Note that whichever option you choose, your report must document the plotting tool and commands such that your figures can be reproduced.
 
 \subsection*{Submission Format}
